Stable Version everything compiling

--- a/src/app/pong/pong.component.html
+++ b/src/app/pong/pong.component.html
@@ -1,1 +1,4 @@
-<canvas #PongCanvas width="{{width}}" height="{{height}}"></canvas>
+<canvas #PongCanvas width="{{ width }}" height="{{ height }}"></canvas>
+
+{{ controlState | json }}
+{{ item$ | async | json }}
